# rweb

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: rust.yml
fixtures/: smoke.html
src/: gui.rs  header.rs  lib.rs  main.rs  mime.rs
src/browser/: app.rs  display.rs  event.rs  font.rs  html.rs  loader.rs  mod.rs  page.rs  renderer.rs  tab.rs  window.rs
src/html/: document.rs  mod.rs  node.rs  parser.rs  tag.rs
src/http/: header.rs  method.rs  mod.rs  request.rs  response.rs  scheme.rs  status.rs  url.rs  version.rs
src/loader/: client.rs  load.rs  method.rs  mod.rs  request.rs  response.rs  scheme.rs  send.rs  status.rs  url.rs
src/loader/data_client/: mod.rs
src/loader/file/: mod.rs
src/loader/http/: client.rs  header.rs  load.rs  mod.rs  request.rs  response.rs  scheme.rs  url.rs
src/loader/http_client/: client.rs
tests/: client.rs
tests/support/: mod.rs
